# grouplock

./: .codebeatignore  .codecov.yml  .travis.yml  README.md  Tutorial for making project  codecov.yml
Attachments/algorithms_symm_asymm/: Алгоритмы шифрования.doc  Алгоритмы шифрования.pptx
Attachments/memory_leak/: MemoryLeak.docx
ByteArrayInt/ByteArrayInInt/: ByteArrayInInt.sln
ByteArrayInt/UnitTestForByteInt/: UnitTestForByteInt.sln
FinalKey/app/: build.gradle
Fish/app/: build.gradle
GroupLock/: BMPLENA.txt  mybmp.txt
GroupLock iOS/: .gitignore  Podfile
GroupLock iOS/GroupLock/: AppDelegate.swift  Colors.swift  GroupLock-Bridging-Header.h  GroupLockMainViewController.swift  HomeViewController.swift  Info.plist  PasswordViewController.swift  TabBarController.swift  UI.nss  UIColor.swift  UINavigationController.swift  UIViewController.swift  ViewController.swift
GroupLock iOS/GroupLock.xcodeproj/: project.pbxproj
GroupLock iOS/GroupLock.xcworkspace/: contents.xcworkspacedata
GroupLock iOS/GroupLockTests/: GroupLockTests.swift  NUIButtonTests.swift  NUIEnterPasswordLabelTests.swift  NUIProceedButtonTests.swift  NUITests.nss
GroupLock iOS/GroupLockUITests/: GroupLockUITests.swift
GroupLockApplication/: .travis.yml  build.gradle  gradle.properties  grlock.jks
GroupLockApplication/app/: app-release.apk  build.gradle  proguard-rules.pro
GroupLockCrypto/: .gitignore  CMakeLists.txt
GroupLockCrypto/Source/: decryptBMP.cpp  decryptBMP.h  encryptBMP.cpp  encryptBMP.h  glcrypto.h  glcrypto_bmp.h  glcrypto_bmp_decryption.c  glcrypto_bmp_encryption.c  glcrypto_bmp_encryption.h  glcrypto_bmp_loading.c  glcrypto_bmp_loading.h  glcrypto_bmp_saving.c  glcrypto_decryption.c  glcrypto_encryption.c  glcrypto_error.h  loadBMP.cpp  loadbmp.h  saveBMP.cpp  savebmp.h  sodium7.c  sodium7.cpp  stdafx.cpp  stdafx.h
GroupLockCrypto/Sources/: glcrypto.h  glcrypto_bmp.h  glcrypto_bmp_decryption.c  glcrypto_bmp_encryption.c  glcrypto_bmp_loading.c  glcrypto_bmp_saving.c  glcrypto_decryption.c  glcrypto_encryption.c  glcrypto_platforms.h  glcrypto_swift_interface.h  glcrypto_types.h
GroupLockCrypto/Tests/: main.c  suites.h  utils.c  utils.h
GroupLockCrypto/Tests/suites/: bmp_tests.c
GroupLockCrypto/libsodium/Windows/: libsodium.lib
GroupLockiOS/: .gitignore  .swiftlint.yml  Podfile
GroupLockiOS/GroupLock/: AppDelegate.swift  ChooseFileConfigurator.swift  ChooseFileInteractor.swift  ChooseFileModels.swift  ChooseFilePresenter.swift  ChooseFileRouter.swift  ChooseFileViewCell.swift  ChooseFileViewController.swift  ChooseFileWorker.swift  CollectionViewLayoutProperties.swift  Directory.swift  EncryptionKeyProvider.swift  File+CoreDataProperties.swift  File.swift  FileInfoDataSource.swift  FileManager.swift  FileTableViewCell.swift  Folder+CoreDataProperties.swift  Folder.swift  FolderTableViewCell.swift  HomeViewController.swift  Info.plist  KeyType.swift  KeyTypeViewController.swift  LibraryDirectoryViewController.swift  LibraryPageViewController.swift  LibraryViewController.swift  NavigationController.swift  PasswordInteractor.swift  PasswordPresenter.swift  PasswordViewController.swift  PresentedDataSource.swift  SupportDeclarations.swift  UI.nss  UIViewController.swift  ViewFileViewController.swift  default_folders.json
GroupLockiOS/GroupLock.xcodeproj/: project.pbxproj
GroupLockiOS/GroupLockTests/: ChooseFileInteractorTests.swift  ChooseFilePresenterTests.swift  ChooseFileViewControllerTests.swift  ChooseFileWorkerTests.swift  CryptoFakeTests.swift  EncryptedFileDataSourceTests.swift  EncryptedFileInteractorTests.swift  EncryptedFileModelsComparison.swift  EncryptedFilePresenterTests.swift  EncryptedFileViewControllerTests.swift  EquatableModel+XCTAssertEqual.swift  Extensions.swift  ImageComparison.swift  KeyTypeButtonTests.swift  KeyTypeInteractorTests.swift  KeyTypeViewControllerTests.swift  NUIBarButtonTests.swift  NUICollectionViewCellTests.swift  NUIDirectoryButtonTests.swift  NUIEnterPasswordLabelTests.swift  NUIGeneralButtonTests.swift  NUIGeneralTableCellTests.swift  NUIGeneralTableTests.swift  NUIGeneralViewTests.swift  NUIKeyTypeButtonTests.swift  NUINavigationBarTests.swift  NUIPasswordViewTests.swift  NUIProceedButtonTests.swift  NUITabBarTests.swift  NUITextFieldTests.swift  NUIViewTests.swift  NumberOfKeysInteractorTests.swift  NumberOfKeysViewControllerTests.swift  OptionalArray+XCTAssertEqual.swift  PasswordInteractorTests.swift  PasswordPresenterTests.swift  PasswordViewControllerTests.swift  (+16 more)
MatrixLibUnitTesting/: MatrixLibUnitTesting.sln
SharedSecret/: Poly.h  Source.cpp  partsSecret.h
TestMatrixLib/: TestMatrixLib.sln
UnitTestForFractionMatrix/: UnitTestForFractionMatrix.sln
UnitTestMatrixFraction/: UnitTestMatrixFraction.sln
app/: build.gradle
bmp/: testbmp2.cpp  testbmp2.sln  testbmp2.vcxproj
bmp/Debug/: testbmp2.ilk
libFraction/: UnitTestForFraction.cpp  fraction.h
lipPrime/: PrimeNum.h
sodium7/: readme.txt  sodium7.sln
(+685 files in other folders)
